--- a/style2.css
+++ b/style2.css
@@ -12,6 +12,8 @@
     /* border: 1px solid black; */
     background-color: gold;
     /* background: url('http://soccersuck.com/img/web/ss_bg01.jpg'); */
+    position: relative;
+    left: -10px;
 }
 .box_tophd{
     padding: 15px;
@@ -160,4 +162,32 @@ hr{
     margin-right: 10px;
     float: right;
     background: url('http://soccersuck.com/img/web/ss_bg01.jpg');
+}
+.clr {
+    clear: both;
+}
+#footer{
+    padding: 2rem;
+    padding-top: 10px;
+    margin-top: 1px;
+    background-color: #454545;
+    color: #fff;
+    font-size: 13px;
+    font-weight: bold;
+    position: relative;
+    left: -10px;
+}
+.footer_content a{
+    color: #fff;
+    text-decoration: none;
+    font-weight: normal;
+    
+}
+.footer_content2{
+    /* border: 1px solid black; */
+    margin-top: 10px;
+}
+#footer p{
+    text-align: center;
+    font-size: 0.4cm;
 }
