--- a/style2.css
+++ b/style2.css
@@ -191,3 +191,7 @@ hr{
     text-align: center;
     font-size: 0.4cm;
 }
+.footer_content a:hover{
+    background-color: yellowgreen;
+    font-size: 17px;
+}
