--- a/style2.css
+++ b/style2.css
@@ -2,9 +2,14 @@
     box-sizing: border-box;
     margin: 0;
 }
+body{
+    background-color: green;
+}
 .header{
+    background-color: gold;
     width: 100%;
     height: 100px;
+    border-bottom: 6px solid black;
 }
 .header_top{
     width: 1120px;
@@ -14,6 +19,8 @@
     /* background: url('http://soccersuck.com/img/web/ss_bg01.jpg'); */
     position: relative;
     left: -10px;
+    margin: 0 auto;
+    border-bottom: 6px solid black;
 }
 .box_tophd{
     padding: 15px;
@@ -41,13 +48,15 @@
 .container{
     width: 1120px;
     height: 100%;
+    margin: 0 auto;
 }
 .container_left{
     width: 200px;
     height: 2800px;
     /* border: 1px solid black; */
-    margin-top: 10px;
-    margin-left: 10px;
+    /* margin-top: 10px; */
+    position: relative;
+    left: -10px;
     float: left;
     background: url('http://soccersuck.com/img/web/ss_bg01.jpg');
 }
@@ -62,7 +71,7 @@
     height: 240px;
     /* border: 1px solid black; */
     margin-top: 10px;
-    margin-left: 5px;
+    margin-left: 1px;
 }
 .mypro{
     width: 720px;
@@ -85,7 +94,7 @@
     width: 700px;
     /* border: 1px solid black; */
     margin-top: 10px;
-    margin-left: 15px;
+    margin-left: 10px;
 }
 .myfav{
     width: 720px;
@@ -143,8 +152,9 @@
 #myfav_6 img{
     width: 500px;
     margin-left: 100px;
-    border: 3px dashed #fff;
+    border: 3px dashed none;
     border-radius: 200px;
+    margin-top: 25px;
 }
 hr{
     border: 2px solid red;
@@ -158,7 +168,7 @@ hr{
     width: 180px;
     height: 2800px;
     /* border: 2px solid black; */
-    margin-top: 10px;
+    /* margin-top: 10px; */
     margin-right: 10px;
     float: right;
     background: url('http://soccersuck.com/img/web/ss_bg01.jpg');
