--- a/style2.css
+++ b/style2.css
@@ -24,7 +24,7 @@ body{
     border-bottom: 6px solid black;
     display: flex;
     flex-direction: row;
-    justify-content: start;
+    justify-content: flex-start;
     align-items: center;
 }
 .box_tophd{
@@ -128,17 +128,23 @@ body{
     border: 10px solid black;
     padding: 10px;
 }
+.myfavbox_345{
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    /* border: 2px solid black; */
+}
 .boximg_fav{
     /* width: 720px; */
     /* height: 500px; */
     /* border: 1px solid black; */
-    display: inline-block;
+    /* display: inline-block; */
+    margin-left: -2px;
 }
 #myfav_3 img{
     width: 200px;
     height: 280px;
-    margin-top: 40px;
-    margin-left: 30px;
+    margin: 40px 20px;
+    /* margin-left: 30px; */
     /* border-radius: 50px; */
     border: 10px solid black;
     padding: 5px;
@@ -146,22 +152,23 @@ body{
 #myfav_4 img{
     width: 200px;
     height: 280px;
-    margin-left: 20px;
+    margin: 35px 20px;
     border-radius: 50px;
 }
 #myfav_5 img{
     width: 200px;
     height: 280px;
-    margin-left: 20px;
+    margin: 40px 20px;
     border: 10px solid black;
     padding: 5px;
 }
 #myfav_6 img{
     width: 500px;
     margin-left: 100px;
+    margin-top: -30px;
     border: 3px dashed none;
     border-radius: 200px;
-    margin-top: 25px;
+    /* margin-top: 25px; */
 }
 hr{
     border: 2px solid red;
