--- a/style2.css
+++ b/style2.css
@@ -4,6 +4,7 @@
     box-sizing: border-box;
     margin: 0;
     font-family: 'Kanit', sans-serif;
+    scroll-behavior: smooth;
 }
 body{
     background-color: green;
