--- a/style2.css
+++ b/style2.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Kanit&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Kanit&family=Mochiy+Pop+P+One&family=Open+Sans&family=Prompt&display=swap');
 
 *{
     box-sizing: border-box;
@@ -66,9 +66,35 @@ body{
 .box_tophd:hover{
     opacity: 0.7;
 }
-.logo-github{
-    padding: 15px;
+.content-email{
+    font-size: 18px;
     /* border: 2px solid black; */
+    /* padding: 5px 20px; */
+    padding-right: 50px;
+    margin-right: 20px;
+    text-align: left;
+    cursor: pointer;
+    position: relative;
+    animation: nk;
+    animation-duration: 2s;
+    animation-timing-function: linear;
+    animation-iteration-count: infinite;
+}
+@keyframes nk{
+    0%{
+        left: 0;
+    }
+    100%{
+        left: 50px;
+    }
+}
+.logo-facebook{
+    /* padding: 10px; */
+    margin-right: 10px;
+}
+.content-email:hover, .content-email:focus{
+    font-weight: bolder;
+    animation-play-state: paused;
 }
 .logo-facebook a:hover{
     opacity: 0.7;
@@ -244,10 +270,12 @@ hr{
 .footer_content2{
     /* border: 1px solid black; */
     margin-top: 10px;
+    font-weight: normal;
 }
 #footer p{
     text-align: center;
     font-size: 0.4cm;
+    font-family: 'Open Sans', sans-serif;
 }
 .footer_content a:hover{
     background-color: yellowgreen;
